welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: reassignment to val
while (estSurBiscuit=false){
                    ^Variables:3: error: not found: value avancer
	avancer();
        ^